--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -5,3 +5,5 @@ api-version: 1.17
 commands:
   stash:
     description: This is where your rewards are.
+  stashsf:
+    description: This will give Slimefun items.
