--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,7 @@
 main: tech.secretgarden.stash.Main
 name: Stash
-version: 1.0
+author: ChuckLingBao
+version: 1.1.0
 api-version: 1.17
 commands:
   stash:
