--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>tech.secretgarden</groupId>
     <artifactId>Stash</artifactId>
-    <version>1.3.1</version>
+    <version>1.4.0</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -65,6 +65,12 @@
             <artifactId>spigot-api</artifactId>
             <version>1.18.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.5</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     
