--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 main: tech.secretgarden.stash.Stash
 name: Stash
 author: ChuckLingBao
-version: 1.3.1
+version: '${project.version}'
 api-version: 1.18
 commands:
   stash:
