--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>tech.secretgarden</groupId>
     <artifactId>Stash</artifactId>
-    <version>1.7.2</version>
+    <version>1.7.3</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -67,9 +67,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.mchange</groupId>
-            <artifactId>c3p0</artifactId>
-            <version>0.9.5.5</version>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.0.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
