initial successful build of Stash 2.2.0

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
-main: tech.secretgarden.stash.Stash
+main: tech.secretgarden.stash.StashPlugin
 name: Stash
 author: ChuckLingBao
 version: '${project.version}'
-api-version: 1.19
+api-version: '1.20'
 commands:
   stash:
     description: This is where your rewards are.
